@@ -2,6 +2,12 @@
 
 	* src/z80/gen.c,
 	  src/z80/ralloc2.cc:
+	  Improved handling of a.
+
+2021-03-05 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  src/z80/ralloc2.cc:
 	  Improved handling of hl.
 
 2021-03-04 Philipp Klaus Krause <pkk AT spth.de>
